<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="title_activity_attendee_create">Novo</string>
    <string name="title_activity_test">Provas</string>
    <string name="title_fragment_test_view">Detalhes da prova</string>
    <string name="title_activity_map">Mapa</string>
    <string name="name">Nome</string>
    <string name="website">Site</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="score">Nota</string>
    <string name="submit">Gravar</string>
    <string name="photo">Foto</string>

</resources>
