<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <ImageView
	        android:id="@+id/activity_attendee_create__photo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_launcher"
	        android:layout_gravity="center_horizontal" 
	        android:contentDescription="@string/photo"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/name" />
	    
	    <EditText
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName"
	        android:id="@+id/activity_attendee_create__name" />
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/website" />
	    
	    <EditText
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textUri"
	        android:id="@+id/activity_attendee_create__website" />
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/address" />
	    
	    <EditText
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPostalAddress"
	        android:id="@+id/activity_attendee_create__address" />
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/phone" />
	    
	    <EditText
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="phone"
	        android:id="@+id/activity_attendee_create__phone" />
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/score" />
	    
	    <RatingBar
	        android:numStars="5"
	        android:rating="2.5"
	        android:stepSize="0.5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/activity_attendee_create__score" />
	
	    <Button
	        android:id="@+id/activity_attendee_create__submit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit" />
	
	</LinearLayout>
</ScrollView>